// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigsValidation Circular relationship 1`] = `
Object {
  "errors": Object {
    "c1": Array [
      "Circular relationship with 'c2'",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Circular relationship 2`] = `
Object {
  "errors": Object {
    "q1": Array [
      "Circular relationship with 'c2'",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Circular relationship 3`] = `
Object {
  "errors": Object {
    "g1": Array [
      "Circular relationship with 'q1'",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Circular relationship 4`] = `
Object {
  "valid": true,
}
`;

exports[`ConfigsValidation Duplicated choice values 1`] = `
Object {
  "errors": Object {
    "g0_q0": Array [
      "There are choices with same values",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated choice values 2`] = `
Object {
  "errors": Object {
    "g0_q0": Array [
      "There are choices with same values",
    ],
    "id": Array [
      "Id is not unique",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated choice values 3`] = `
Object {
  "errors": Object {
    "g0_q0": Array [
      "There are choices with same values",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated choice values 4`] = `
Object {
  "valid": true,
}
`;

exports[`ConfigsValidation Duplicated choice values 5`] = `
Object {
  "errors": Object {
    "g0_q0": Array [
      "There are choices with same values",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated choice values 6`] = `
Object {
  "errors": Object {
    "g0_q0": Array [
      "There are choices with same values",
    ],
    "id": Array [
      "Id is not unique",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated choice values 7`] = `
Object {
  "errors": Object {
    "g0_q0": Array [
      "There are choices with same values",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated choice values 8`] = `
Object {
  "valid": true,
}
`;

exports[`ConfigsValidation Duplicated ids 1`] = `
Object {
  "errors": Object {
    "g0_q0": Array [
      "There are choices with same values",
    ],
    "id": Array [
      "Id is not unique",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated ids 2`] = `
Object {
  "errors": Object {
    "id": Array [
      "Id is not unique",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated ids 3`] = `
Object {
  "errors": Object {
    "id": Array [
      "Id is not unique",
    ],
    "id_q0": Array [
      "Id is not unique",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No choices 1`] = `
Object {
  "errors": Object {
    "g0": Array [
      "There are no choices",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No choices 2`] = `
Object {
  "errors": Object {
    "g0": Array [
      "There are no choices",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No choices 3`] = `
Object {
  "errors": Object {
    "g0": Array [
      "There are no choices",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No choices 4`] = `
Object {
  "errors": Object {
    "g0": Array [
      "There are no choices",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No choices 5`] = `
Object {
  "valid": true,
}
`;

exports[`ConfigsValidation No groups or questions 1`] = `
Object {
  "errors": Object {
    "": Array [
      "There are no groups or questions",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No groups or questions 2`] = `
Object {
  "errors": Object {
    "": Array [
      "There are no groups or questions",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No questions 1`] = `
Object {
  "errors": Object {
    "g0": Array [
      "There are no questions",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No questions 2`] = `
Object {
  "errors": Object {
    "g0": Array [
      "There are no questions",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No questions 3`] = `
Object {
  "errors": Object {
    "g0": Array [
      "There are no questions",
    ],
    "g0_g0": Array [
      "There are no questions",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Unrecognized ids in choices onSelected 1`] = `
Object {
  "errors": Object {
    "c2": Array [
      "There are unrecognized id(s) in onSelected configs",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Unrecognized ids in choices onSelected 2`] = `
Object {
  "errors": Object {
    "c2": Array [
      "There are unrecognized id(s) in onSelected configs",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Unrecognized ids in choices onSelected 3`] = `
Object {
  "valid": true,
}
`;
